ubuntu-admin-karmada.yaml
# ---
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: ubuntu-admin-karmada-sa
#   namespace: default
#   annotations:
#       eks.amazonaws.com/role-arn: arn:aws:iam::ACCOUNTID:role/role-name
---
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-admin-karmada
  namespace: karmada-system
spec:
  serviceAccountName: ubuntu-admin-karmada
  containers:
  - image: ubuntu
    command:
      - "/bin/bash"
      - "-c"
      - >
        apt-get update &&
        apt-get install -y vim curl git unzip iputils-ping telnet &&
        curl -LO "https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl" &&
        chmod +x ./kubectl &&
        mv ./kubectl /usr/local/bin/kubectl &&
        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" &&
        unzip awscliv2.zip &&
        ./aws/install &&
        curl -sSL -o argocd-linux-amd64 https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64 &&
        install -m 555 argocd-linux-amd64 /usr/local/bin/argocd &&
        rm argocd-linux-amd64 &&
        sleep 604800
    imagePullPolicy: IfNotPresent
    name: ubuntu
    volumeMounts:
        - name: karmada-kubeconfig
          readOnly: true
          mountPath: "/etc/karmada-kubeconfig"
  volumes:
    - name: karmada-kubeconfig
      secret:
        secretName: karmada-kubeconfig
  restartPolicy: Always
